crates/webfang_core/tests/behavioral/snapshots/behavioral__js_shell_exit_65_stderr.snap
---
source: crates/webfang_core/tests/behavioral/main.rs
assertion_line: 43
expression: redacted
---
  <TIMESTAMP>  WARN <MODULE>: readability extraction failed; using text-extraction fallback, url: http://127.0.0.1:<PORT>/, error: Error de extracción: Readability failed: Failed to extract article content from the document
    at <FILE>.rs:<LINE>

  <TIMESTAMP> ERROR <MODULE>: content extraction failed, error: contenido pobre del fallback: 3 bytes (mín 100 bytes). Readability: Error de extracción: Readability failed: Failed to extract article content from the document, url: http://127.0.0.1:<PORT>/, stage: extract, trace_id: "<TRACE_ID>"
    at <FILE>.rs:<LINE>

  <TIMESTAMP> ERROR <MODULE>: page scrape failed, error: extracción falló para http://127.0.0.1:<PORT>/: contenido pobre del fallback: 3 bytes (mín 100 bytes). Readability: Error de extracción: Readability failed: Failed to extract article content from the document, url: http://127.0.0.1:<PORT>/, stage: scrape, trace_id: "<TRACE_ID>"
    at <FILE>.rs:<LINE>

Failed to scrape http://127.0.0.1:<PORT>/: extracción falló para http://127.0.0.1:<PORT>/: contenido pobre del fallback: 3 bytes (mín 100 bytes). Readability: Error de extracción: Readability failed: Failed to extract article content from the document
Error: extracción sin contenido útil: 1 URL(s) devolvieron contenido insuficiente o requieren renderizado de JavaScript
