crates/webfang_core/tests/behavioral/snapshots/behavioral__malformed_xml_stderr.snap
---
source: crates/webfang_core/tests/behavioral/main.rs
expression: redacted
---
  <TIMESTAMP> ERROR <MODULE>: Failed to parse sitemap, error: XML parsing failed: syntax error: tag not closed: `>` not found before end of input, url: http://127.0.0.1:<PORT>/sitemap.xml, stage: sitemap.discovery
    at <FILE>.rs:<LINE>

Error: URL discovery failed: error interno: parse: XML parsing failed: syntax error: tag not closed: `>` not found before end of input
