crates/webfang_core/tests/behavioral/snapshots/behavioral__max_depth_zero_stderr.snap
---
source: crates/webfang_core/tests/behavioral/main.rs
expression: redacted
---
Error: URL discovery failed: maximum depth 0 exceeded at depth 1
