crates/webfang_core/tests/behavioral/snapshots/behavioral__missing_sitemap_auto_discovery_stderr.snap
---
source: crates/webfang_core/tests/behavioral/main.rs
assertion_line: 43
expression: redacted
---
  <TIMESTAMP>  WARN <MODULE>: no sitemap found, base_url: http://127.0.0.1:<PORT>/
    at <FILE>.rs:<LINE>

Warning: No URLs discovered: sitemap not found
