crates/webfang_core/tests/behavioral/snapshots/behavioral__mixed_batch_stays_69_stderr.snap
---
source: crates/webfang_core/tests/behavioral/main.rs
assertion_line: 43
expression: redacted
---
  <TIMESTAMP>  WARN <MODULE>: readability extraction failed; using text-extraction fallback, url: http://127.0.0.1:<PORT>/shell, error: Error de extracción: Readability failed: Failed to extract article content from the document
    at <FILE>.rs:<LINE>

  <TIMESTAMP> ERROR <MODULE>: content extraction failed, error: contenido pobre del fallback: 3 bytes (mín 100 bytes). Readability: Error de extracción: Readability failed: Failed to extract article content from the document, url: http://127.0.0.1:<PORT>/shell, stage: extract, trace_id: "<TRACE_ID>"
    at <FILE>.rs:<LINE>

Failed to scrape http://127.0.0.1:<PORT>/shell: extracción falló para http://127.0.0.1:<PORT>/shell: contenido pobre del fallback: 3 bytes (mín 100 bytes). Readability: Error de extracción: Readability failed: Failed to extract article content from the document
