crates/webfang_core/tests/behavioral/snapshots/behavioral__selector_h3_extracts_only_h3.snap
---
source: crates/webfang_core/tests/behavioral/main.rs
expression: redacted
---
---
title: 'Document: [127.0.0.1]'
url: http://127.0.0.1:<PORT>/
date: [DATE]
---

### Section One Heading With Plenty of Lengthy Text

### Section Two Heading With Plenty of Lengthy Text
