crates/webfang_core/tests/behavioral/snapshots/behavioral__selector_table_extracts_table.snap
---
source: crates/webfang_core/tests/behavioral/main.rs
expression: redacted
---
---
title: 'Document: [127.0.0.1]'
url: http://127.0.0.1:<PORT>/
date: [DATE]
---

Row One Column One Substantive Cell Text

Row One Column Two Substantive Text
