crates/webfang_core/tests/behavioral/snapshots/behavioral__single_page_md_contains_page_content.snap
---
source: crates/webfang_core/../../tests/behavioral/main.rs
expression: redacted
---
---
title: Single Page Test
url: http://127.0.0.1:<PORT>/
date: [DATE]
excerpt: This is meaningful content for the extractor to process.
---

## Hello World

This is meaningful content for the extractor to process.

More paragraphs ensure readability can extract a proper document.
